ci: :green_heart: coverage not found

--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -35,6 +35,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./coverage
           files: ./coverage/**/lcov.info
 
       - name: Upload artifact
