ci: :green_heart: coverage not found

--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: ./coverage
-          files: ./coverage/lcov.info
+          files: lcov.info
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
