ci: :green_heart: coverage not found

--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm test
+          npm test:coverage
 
       - name: Setup Pages
         id: pages
