--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm test:coverage
+          npm run test:coverage
 
       - name: Setup Pages
         id: pages
