--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
+    "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.6",
+    "npm": "^11.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
