--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
-    "axios": "^1.7.9",
+    "@types/text-encoding": "^0.0.40",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
     "@eslint/eslintrc": "^3",
+    "@mswjs/interceptors": "^0.37.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -36,12 +37,15 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "axios": "^1.8.1",
+    "axios-mock-adapter": "^2.1.0",
     "babel-loader": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.7.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
