--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/text-encoding": "^0.0.40",
     "install": "^0.13.0",
+    "jest-fetch-mock": "^3.0.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
