--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -21,17 +21,20 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies, build, and test
-        run: |
-          npm ci
-          npm run build --if-present
-          npm run test:coverage
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build --if-present
+
+      - name: Run tests
+        run: npm run test:coverage
 
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
 
-      - name : Upload coverage reports to Codeov
+      - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
