--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "test:coverage": "npm run test -- --coverage --watchAll=false",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
@@ -41,6 +42,7 @@
     "axios": "^1.8.1",
     "axios-mock-adapter": "^2.1.0",
     "babel-loader": "^9.2.1",
+    "cypress": "^14.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "gh-pages": "^6.3.0",
