feats: add cypress

--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -50,11 +50,12 @@ jobs:
       - name: Authenticate with npm
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
-      - name: Install Cypress
-        run: npm install cypress --save-dev
-
-      - name: Run Cypress tests
-        run: npx cypress run
+      - name: Build the stack
+        run: docker-compose -f docker-compose-v3.yml up -d
+      - name: Run e2e tests with cypress
+        uses: cypress-io/github-action@v6
+      - name: Stop the stack
+        run: docker-compose -f docker-compose-v3.yml down
 
       # - name: Build and publish package on NPM
       #   run: |
