feats: modify cypress

--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -53,6 +53,12 @@ jobs:
       - name: Install Cypress
         run: npm install cypress --save-dev
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Install Docker Compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
+
       - name: Start services with Docker Compose
         run: docker-compose up --build -d
         env:
